--- a/Server/templates/serverdata.html
+++ b/Server/templates/serverdata.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="/static/style.css" />
+    </head>
     <body>
         <h1>Here you can see post data from running servers.</h1>
-        <div id="server1">
+        <div id="server1ip">
             <h3>Server Ip:</h3>
+            <div id="status"></div>
             <div id="network"></div>
             <div id="processes"></div>
-            <div id="memory"></div>
         </div>
     </body>
 </html>
