--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -4,6 +4,14 @@
         <link rel="stylesheet" href="/static/style.css" />
     </head>
     <body>
-        <h1>Welcome!</h1>
+        <div class="bgimg">
+            <div class="topleft">
+            </div>
+            <div class="middle">
+                <h1>Welcome!</h1>
+                <hr>
+                <p>The fastest way to check your <a href="http://localhost:5000/servers">servers</a> stats</p>
+            </div>
+        </div>
     </body>
 </html>
